<?xml version="1.0"?>
<package format="2">
  <name>OpENer</name>
  <version>0.1.0</version>
  <description>The OpENer Catkin Package</description>
  <maintainer email="wmccormick@swri.org">Bill McCormick</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
